Should be ready to run in heroku

--- a/thumbor.conf
+++ b/thumbor.conf
@@ -6,3 +6,19 @@ DETECTORS = [
 SECURITY_KEY = 'override me'
 
 ALLOW_UNSAFE_URL = False
+
+STORAGE = "thumbor.storages.mixed_storage"
+
+MIXED_STORAGE_FILE_STORAGE = "thumbor.storages.no_storage"
+MIXED_STORAGE_CRYPTO_STORAGE = "thumbor.storages.redis_storage"
+MIXED_STORAGE_DETECTOR_STORAGE = "thumbor.storages.redis_storage"
+
+# Redis Storage
+import os
+import urlparse
+redis_url = urlparse.urlparse(os.environ.get('REDISTOGO_URL', 'redis://localhost:6959'))
+
+REDIS_STORAGE_SERVER_HOST = redis_url.hostname
+REDIS_STORAGE_SERVER_PORT = redis_url.port
+REDIS_STORAGE_SERVER_DB = 0
+REDIS_STORAGE_SERVER_PASSWORD = redis_url.password
