Configurable security key

--- a/thumbor.conf
+++ b/thumbor.conf
@@ -1,9 +1,12 @@
+import os
+import urlparse
+
 DETECTORS = [
 	'thumbor.detectors.face_detector',
 	'thumbor.detectors.feature_detector',
 ]
 
-SECURITY_KEY = 'override me'
+SECURITY_KEY = os.environ.get('THUMBOR_SECURITY_KEY', 'override me')
 
 ALLOW_UNSAFE_URL = False
 
@@ -14,8 +17,6 @@ MIXED_STORAGE_CRYPTO_STORAGE = "thumbor.storages.redis_storage"
 MIXED_STORAGE_DETECTOR_STORAGE = "thumbor.storages.redis_storage"
 
 # Redis Storage
-import os
-import urlparse
 redis_url = urlparse.urlparse(os.environ.get('REDISTOGO_URL', 'redis://localhost:6959'))
 
 REDIS_STORAGE_SERVER_HOST = redis_url.hostname
