Use REDIS_PROVIDER env variable if available.

--- a/thumbor.conf
+++ b/thumbor.conf
@@ -17,7 +17,7 @@ MIXED_STORAGE_CRYPTO_STORAGE = "thumbor.storages.redis_storage"
 MIXED_STORAGE_DETECTOR_STORAGE = "thumbor.storages.redis_storage"
 
 # Redis Storage
-redis_url = urlparse.urlparse(os.environ.get('REDISTOGO_URL', 'redis://localhost:6959'))
+redis_url = urlparse.urlparse(os.environ.get(os.environ.get('REDIS_PROVIDER', 'REDISTOGO_URL'), 'redis://localhost:6959'))
 
 REDIS_STORAGE_SERVER_HOST = redis_url.hostname
 REDIS_STORAGE_SERVER_PORT = redis_url.port
